<resources>
    <string name="app_name">Photos</string>
    <string name="logo">Logo</string>
    <string name="open_side_navigation">Open side navigation</string>
    <string name="profile">Profile</string>
    <string name="new_">New</string>
    <string name="upload_image">Upload image</string>
    <string name="upload">Upload</string>
    <string name="display_picture">Display picture</string>
    <string name="edit">Edit</string>
    <string name="edit_image">Edit image</string>
    <string name="my_dashboard">My dashboard</string>
    <string name="followers">Followers</string>
    <string name="artworks">Artworks</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="shares">Shares</string>
    <string name="palette">Palette</string>
    <string name="uploads">Uploads</string>
    <string name="revenue">Revenue</string>
    <string name="palette_color_1">Palette color 1</string>
    <string name="palette_color_2">Palette color 2</string>
    <string name="palette_color_3">Palette color 3</string>
    <string name="palette_color_4">Palette color 4</string>
    <string name="palette_color_5">Palette color 5</string>
    <string name="image">Image</string>
</resources>
