<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="profileViewModel"
            type="com.example.photos.viewmodel.profile.ProfileViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/palette_1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/sample_1"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/palette_color_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/palette_2"
            android:layout_marginTop="18dp" />
        <View
            android:id="@+id/palette_2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/sample_2"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/palette_color_2"
            app:layout_constraintStart_toEndOf="@id/palette_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/palette_3"
            android:layout_marginTop="18dp" />
        <View
            android:id="@+id/palette_3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/sample_3"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/palette_color_3"
            app:layout_constraintStart_toEndOf="@id/palette_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/palette_4"
            android:layout_marginTop="18dp" />
        <View
            android:id="@+id/palette_4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/sample_4"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/palette_color_4"
            app:layout_constraintStart_toEndOf="@id/palette_3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/palette_5"
            android:layout_marginTop="18dp" />
        <View
            android:id="@+id/palette_5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/sample_5"
            android:foreground="?selectableItemBackground"
            android:contentDescription="@string/palette_color_5"
            app:layout_constraintStart_toEndOf="@id/palette_4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="18dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/palette"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@id/palette_1"
            app:layout_constraintEnd_toEndOf="@id/palette_5"
            app:layout_constraintTop_toTopOf="@id/palette_1"
            app:layout_constraintBottom_toBottomOf="@id/palette_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ib_uploads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:drawableTop="@drawable/upload_with_state"
            android:text="@string/uploads"
            android:textColor="@color/large_image_button_tint"
            android:elevation="0dp"
            android:contentDescription="@string/uploads"
            android:background="@drawable/large_image_button_background"
            android:fontFamily="@font/barlow_medium"
            android:textAllCaps="false"
            app:selected="@{true}"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@id/palette_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ib_exhibitions"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ib_exhibitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:drawableTop="@drawable/image"
            android:text="@string/exhibitions"
            android:textColor="@color/large_image_button_tint"
            android:elevation="0dp"
            android:contentDescription="@string/exhibitions"
            android:background="@drawable/large_image_button_background"
            android:fontFamily="@font/barlow_medium"
            android:textAllCaps="false"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@id/palette_1"
            app:layout_constraintStart_toEndOf="@id/ib_uploads"
            app:layout_constraintEnd_toStartOf="@id/ib_revenue"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ib_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:drawableTop="@drawable/coins"
            android:text="@string/revenue"
            android:textColor="@color/large_image_button_tint"
            android:elevation="0dp"
            android:contentDescription="@string/revenue"
            android:background="@drawable/large_image_button_background"
            android:fontFamily="@font/barlow_medium"
            android:textAllCaps="false"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@id/palette_1"
            app:layout_constraintStart_toEndOf="@id/ib_exhibitions"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
