<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="profileViewModel"
            type="com.example.photos.viewmodel.profile.ProfileViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ib_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/upload"
            android:text="@string/upload"
            android:textColor="@color/image_button_action_color"
            android:elevation="0dp"
            android:contentDescription="@string/upload_image"
            android:background="?selectableItemBackgroundBorderless"
            android:fontFamily="@font/barlow_condensed_light"
            android:textAllCaps="false"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/img_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/img_dp"
            app:layout_constraintEnd_toStartOf="@id/img_dp"/>

        <ImageView
            android:id="@+id/img_dp"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dp_background"
            android:contentDescription="@string/display_picture"
            android:src="@drawable/dp"
            app:clipToOutline="@{true}"
            app:layout_constraintEnd_toStartOf="@id/ib_edit"
            app:layout_constraintStart_toEndOf="@id/ib_upload"
            app:layout_constraintTop_toTopOf="parent"
            tools:clipToOutline="true"
            tools:ignore="ImageContrastCheck" />


        <Button
            android:id="@+id/ib_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/edit"
            android:text="@string/edit"
            android:textColor="@color/image_button_action_color"
            android:elevation="0dp"
            android:contentDescription="@string/edit_image"
            android:background="?selectableItemBackgroundBorderless"
            android:fontFamily="@font/barlow_condensed_light"
            android:textAllCaps="false"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/img_dp"
            app:layout_constraintStart_toEndOf="@id/img_dp"
            app:layout_constraintBottom_toBottomOf="@id/img_dp"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/txt_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="john.doe"
            android:textAlignment="center"
            android:fontFamily="@font/barlow_extra_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
