<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileFragment">

        <Button
            android:id="@+id/ib_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/upload"
            android:text="@string/upload"
            android:textColor="@color/image_button_action_color"
            android:elevation="0dp"
            android:contentDescription="@string/upload_image"
            android:background="?selectableItemBackgroundBorderless"
            android:fontFamily="@font/barlow_condensed_regular"
            android:textAllCaps="false"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/img_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/img_dp"
            app:layout_constraintEnd_toStartOf="@id/img_dp"/>

        <ImageView
            android:id="@+id/img_dp"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dp_background"
            android:contentDescription="@string/display_picture"
            android:src="@drawable/dp"
            app:clipToOutline="@{true}"
            app:layout_constraintEnd_toStartOf="@id/ib_edit"
            app:layout_constraintStart_toEndOf="@id/ib_upload"
            app:layout_constraintTop_toTopOf="parent"
            tools:clipToOutline="true"
            tools:ignore="ImageContrastCheck" />


        <Button
            android:id="@+id/ib_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/edit"
            android:text="@string/edit"
            android:textColor="@color/image_button_action_color"
            android:elevation="0dp"
            android:contentDescription="@string/edit_image"
            android:background="?selectableItemBackgroundBorderless"
            android:fontFamily="@font/barlow_condensed_regular"
            android:textAllCaps="false"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/img_dp"
            app:layout_constraintStart_toEndOf="@id/img_dp"
            app:layout_constraintBottom_toBottomOf="@id/img_dp"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/txt_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="john.doe"
            android:textAlignment="center"
            android:fontFamily="@font/barlow_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="HardcodedText" />


        <TextView
            android:id="@+id/txt_my_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/my_dashboard"
            android:fontFamily="@font/barlow_condensed_regular"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@id/switch_dashboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/switch_dashboard"
            app:layout_constraintBottom_toBottomOf="@id/switch_dashboard" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:thumb="@drawable/switch_thumb"
            app:trackTint="@color/switch_track"
            app:switchMinWidth="58dp"
            app:layout_constraintTop_toBottomOf="@id/txt_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_my_dashboard" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/switch_dashboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_followers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2.3K"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_artworks_count"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/txt_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            app:layout_constraintTop_toBottomOf="@id/txt_followers_count"
            app:layout_constraintStart_toStartOf="@id/txt_followers_count"
            app:layout_constraintEnd_toEndOf="@id/txt_followers_count"
            />
        <TextView
            android:id="@+id/txt_artworks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/txt_followers_count"
            app:layout_constraintEnd_toStartOf="@id/txt_exhibitions_count"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/txt_artworks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artworks"
            app:layout_constraintTop_toBottomOf="@id/txt_artworks_count"
            app:layout_constraintStart_toStartOf="@id/txt_artworks_count"
            app:layout_constraintEnd_toEndOf="@id/txt_artworks_count"
            />
        <TextView
            android:id="@+id/txt_exhibitions_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="21"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/txt_artworks_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/txt_exhibitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exhibitions"
            app:layout_constraintTop_toBottomOf="@id/txt_exhibitions_count"
            app:layout_constraintStart_toStartOf="@id/txt_exhibitions_count"
            app:layout_constraintEnd_toEndOf="@id/txt_exhibitions_count"
            />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/txt_followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
