<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?android:attr/windowBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/white"
                    android:contentDescription="@string/logo"
                    android:padding="4dp"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/image_button_background"
                    android:contentDescription="@string/profile"
                    app:toolTipTextCompat="@{@string/profile}"
                    android:src="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ib_new"
                    app:layout_constraintTop_toTopOf="parent"
                    app:selected="@{true}" />

                <ImageButton
                    android:id="@+id/ib_new"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/image_button_background"
                    android:contentDescription="@string/new_"
                    app:toolTipTextCompat="@{@string/new_}"
                    android:src="@drawable/plus"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ib_nav_menu"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ib_nav_menu"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/image_button_background"
                    android:contentDescription="@string/open_side_navigation"
                    app:toolTipTextCompat="@{@string/open_side_navigation}"
                    android:src="@drawable/bars"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:layout="@layout/fragment_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
