<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="profileViewModel"
            type="com.example.photos.viewmodel.profile.ProfileViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/txt_my_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/my_dashboard"
            android:fontFamily="@font/barlow_condensed_light"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@id/switch_dashboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/switch_dashboard"
            app:layout_constraintBottom_toBottomOf="@id/switch_dashboard" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="@={profileViewModel.dashboardEnabled}"
            android:thumb="@drawable/switch_thumb"
            app:trackTint="@color/switch_track"
            app:switchMinWidth="58dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_my_dashboard" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/switch_dashboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_followers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{profileViewModel.followers}"
            tools:text="2.3K"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/barlow_condensed_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_artworks_count"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/txt_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:fontFamily="@font/barlow_condensed_light"
            app:layout_constraintTop_toBottomOf="@id/txt_followers_count"
            app:layout_constraintStart_toStartOf="@id/txt_followers_count"
            app:layout_constraintEnd_toEndOf="@id/txt_followers_count"
            />
        <TextView
            android:id="@+id/txt_artworks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{profileViewModel.artworks}"
            tools:text="50"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/barlow_condensed_light"
            app:layout_constraintStart_toEndOf="@id/txt_followers_count"
            app:layout_constraintEnd_toStartOf="@id/txt_exhibitions_count"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/txt_artworks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artworks"
            android:fontFamily="@font/barlow_condensed_light"
            app:layout_constraintTop_toBottomOf="@id/txt_artworks_count"
            app:layout_constraintStart_toStartOf="@id/txt_artworks_count"
            app:layout_constraintEnd_toEndOf="@id/txt_artworks_count"
            />
        <TextView
            android:id="@+id/txt_exhibitions_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{profileViewModel.exhibitions}"
            tools:text="21"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/barlow_condensed_light"
            app:layout_constraintStart_toEndOf="@id/txt_artworks_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/txt_exhibitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exhibitions"
            android:fontFamily="@font/barlow_condensed_light"
            app:layout_constraintTop_toBottomOf="@id/txt_exhibitions_count"
            app:layout_constraintStart_toStartOf="@id/txt_exhibitions_count"
            app:layout_constraintEnd_toEndOf="@id/txt_exhibitions_count"
            />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/barlow_condensed_light"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/txt_followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/img_likes"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:src="@drawable/heart"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/likes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_likes"
            app:layout_constraintBottom_toBottomOf="@id/txt_likes"
            app:layout_constraintEnd_toStartOf="@id/txt_likes"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/txt_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:text="@{profileViewModel.likes}"
            tools:text="120"
            android:fontFamily="@font/barlow_extra_light"
            app:layout_constraintStart_toEndOf="@id/img_likes"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintEnd_toStartOf="@id/img_comments"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/img_comments"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:src="@drawable/plane"
            android:layout_marginTop="2dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/comments"
            app:layout_constraintStart_toEndOf="@id/txt_likes"
            app:layout_constraintTop_toTopOf="@id/txt_comments"
            app:layout_constraintBottom_toBottomOf="@id/txt_comments"
            app:layout_constraintEnd_toStartOf="@id/txt_comments"
            />

        <TextView
            android:id="@+id/txt_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:text="@{profileViewModel.comments}"
            tools:text="43K"
            android:fontFamily="@font/barlow_extra_light"
            app:layout_constraintStart_toEndOf="@id/img_comments"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintEnd_toStartOf="@id/img_shares"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/img_shares"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:src="@drawable/share"
            android:layout_marginTop="2dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/shares"
            app:layout_constraintStart_toEndOf="@id/txt_comments"
            app:layout_constraintTop_toTopOf="@id/txt_shares"
            app:layout_constraintBottom_toBottomOf="@id/txt_shares"
            app:layout_constraintEnd_toStartOf="@id/txt_shares"
            />

        <TextView
            android:id="@+id/txt_shares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:text="@{profileViewModel.shares}"
            tools:text="2.3K"
            android:fontFamily="@font/barlow_extra_light"
            app:layout_constraintStart_toEndOf="@id/img_shares"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
